--- a/Resources/css/styles-light.css
+++ b/Resources/css/styles-light.css
@@ -1293,6 +1293,7 @@
 
 		table td.td-description,
 		table td.td-description a {
+			font-family: 'Faustina',sans-serif ;
 			font-weight: 500 ;
 		}
 
