--- a/Resources/css/styles-dark.css
+++ b/Resources/css/styles-dark.css
@@ -13,7 +13,7 @@
 	}
 
 	body {
-		background-color: rgba(1,5,15,.98) ;
+		background-color: rgba(1,5,15,.95) ;
 		color: rgba(255,255,255,1) ;
 		font-family: 'Roboto',sans-serif ;
 		-webkit-font-smoothing: antialiased ;
@@ -436,12 +436,12 @@
 				background-color: rgba(255,255,255,.1) ;
 			}
 
-		section.summary p.shortcuts span.is-highlight {
+		section.summary p.shortcuts span.is-highlighted {
 /*			background-color: rgba(219,68,55,.1) ;
 			border: 1px solid rgba(219,68,55,.2) ; */
 		}
 
-			section.summary p.shortcuts span.is-highlight:hover {
+			section.summary p.shortcuts span.is-highlighted:hover {
 				background-color: rgba(219,68,55,.2) ;
 			}
 
@@ -525,7 +525,7 @@
 		font-size: .83em ;
 		}
 
-	article section blockquote.is-highlight {
+	article section blockquote.is-highlighted {
 		display: block !important ;
 	}
 
@@ -771,8 +771,8 @@
 			color: rgba(255,255,255,.6) ;
 		}
 
-		p.shortcuts span.is-highlight,
-		p.shortcuts span.is-highlight a {
+		p.shortcuts span.is-highlighted,
+		p.shortcuts span.is-highlighted a {
 			color: rgba(219,68,55,1) ;
 		}
 
@@ -803,11 +803,11 @@
 			color: rgba(255,255,255,.8) ;
 		}
 
-		header a.anchor-is-highlight {
+		header p.header-anchors a.is-highlighted {
 			color: rgba(219,68,55,1) ;
 		}
 
-		header a.anchor-is-reference {
+		header p.header-anchors a.is-reference {
 			color: rgba(86,133,244,1) ;
 		}
 
@@ -830,8 +830,8 @@
 			color: rgba(255,255,255,.6) ;
 		}
 
-		table td.td-link:hover span.td-link-expands-is-reference,
-		table td.td-link:hover span.td-link-expands-is-reference a {
+		table td.td-link:hover span.is-reference,
+		table td.td-link:hover span.is-reference a {
 			color: rgba(86,133,244,.6) !important ;
 		}
 
@@ -950,14 +950,14 @@
 	a.istype-latest,
 	a.istype-pinned,
 	a.istype-topcited,
-	a.is-highlight,
+	a.is-highlighted,
 	a.is-reference,
 	a.is-feature,
 	a.is-version, {
 		border-radius: 0em 1em ;
 	}
 
-	blockquote.is-highlight {
+	blockquote.is-highlighted {
 		background-color: rgba(219,68,55,.1) ;
 		-webkit-box-shadow: -6px 0px 0px rgba(219,68,55,.6) ;
 		-moz-box-shadow: -6px 0px 0px rgba(219,68,55,.6) ;
@@ -969,7 +969,7 @@
 		border-radius: 1em ;
 	}
 
-	li.is-highlight {
+	li.is-highlighted {
 		background-color: rgba(219,68,55,.1) ;
 		border-radius: 1em ;
 	}
@@ -1447,7 +1447,7 @@
 		}
 
 		.is-hidden {
-			display: none ;
+			display: none important ;
 		}
 
 		.lang-nl {
@@ -1459,7 +1459,7 @@
 /*			background-color: rgba(244,160,0,.2) ; */
 		}
 
-		a.is-highlight,
+		a.is-highlighted,
 		a.istype-pinned {
 /*			background-color: rgba(219,68,55,.2) ; */
 		}
@@ -1482,7 +1482,7 @@
 				display: inline ;
 			}
 
-		footer p.legend span.is-highlight {
+		footer p.legend span.is-highlighted {
 			background-color: rgba(219,68,55,.2) ;
 			border-radius: 0em 1em ;
 			color: rgba(219,68,55,1) ;
@@ -1566,7 +1566,7 @@
 		}
 
 			table tr.tr-istype-pinned,
-			.is-highlight,
+			.is-highlighted,
 			.is-upcoming:hover,
 			.y2026:hover,
 
@@ -1771,6 +1771,11 @@
 		display: none ;
 	}
 
+	section.contact-card table #Card-Email-Alt,
+	section.contact-card table #Card-PersonalWebsite-Alt {
+		display: none ;
+	}
+
 
 	/* PARAGRAPH, LIST, SMALL */
 
@@ -1783,6 +1788,13 @@
 		font-size: .83em ;
 		font-style: italic ;
 		padding: 1em ;
+	}
+
+
+	/* TYPES */
+
+	.is-hidden {
+		display: none !important ;
 	}
 
 }
@@ -1801,7 +1813,7 @@
 	main,
 	header,
 	footer {
-		color: rgba(255,255,255,1) ;
+		color: rgba(32,34,36,1) ;
 		font-family: 'Faustina',sans-serif ;
 		font-size: 11.5pt ;
 		font-weight: 400 ;
@@ -1834,7 +1846,7 @@
 	/* HYPERLINKS */
 
 	a {
-		color: rgba(255,255,255,1) ;
+		color: rgba(32,34,36,1) ;
 		text-decoration: none ;
 	}
 
