--- a/Resources/css/styles-dark.css
+++ b/Resources/css/styles-dark.css
@@ -1228,6 +1228,7 @@
 		}
 
 		table th.th-istype-sortby {
+			color: rgba(244,160,0,1) ;
 /*			border-bottom: 1px solid rgba(255,255,255,.6) ; */
 		}
 
