--- a/Resources/css/styles-light.css
+++ b/Resources/css/styles-light.css
@@ -1229,6 +1229,7 @@
 		}
 
 		table th.th-istype-sortby {
+			color: rgba(244,160,0,1) ;
 /*			border-bottom: 1px solid rgba(32,34,36,.6) ; */
 		}
 
