--- a/Resources/css/styles-dark.css
+++ b/Resources/css/styles-dark.css
@@ -1228,8 +1228,12 @@
 		}
 
 		table th.th-istype-sortby {
-			color: rgba(244,160,0,1) ;
 /*			border-bottom: 1px solid rgba(255,255,255,.6) ; */
+		}
+
+		table th.th-datemodified.th-istype-sortby {
+			color: rgba(244,160,0,1) ;
+/*			border-bottom: 1px solid rgba(244,160,0,1) ; */
 		}
 
 		section.bios table,
