--- a/Resources/css/styles-dark.css
+++ b/Resources/css/styles-dark.css
@@ -63,7 +63,7 @@
 	small.header-note-connect {
 		background-color: rgba(86,133,244,.2) ;
 		border-radius: .5em ;
-		color: rgba(255,255,255,1) ;
+		color: rgba(86,133,244,1) ;
 		display: block ;
 		font-family: 'Roboto',sans-serif ;
 		font-size: 1em ;
@@ -71,8 +71,8 @@
 		padding: 2em ;
 	}
 
-	small.header-note-contact a {
-		color: rgba(255,255,255,1) ;
+	small.header-note-connect a {
+		color: rgba(86,133,244,1) ;
 	}
 
 
@@ -1697,7 +1697,7 @@
 }
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1440px) {
 
 
 	/* PAGE SETUP */
@@ -1758,27 +1758,6 @@
 		font-family: 'Roboto',sans-serif ;
 		font-size: .83em ;
 		text-align: right ;
-	}
-
-
-	/* TABLE */
-
-/*	table th.th-link,
-	table td.td-link,
-	table th.th-description,
-	table td.td-description,
-	table th.th-datemodified,
-	table td.td-datemodified, */
-	table th.th-kind,
-	table td.td-kind,
-	table th.th-access,
-	table td.td-access {
-		display: none ;
-	}
-
-	section.contact-card table #Card-Email-Alt,
-	section.contact-card table #Card-PersonalWebsite-Alt {
-		display: none ;
 	}
 
 
@@ -1844,7 +1823,12 @@
 		}
 
 		section.summary blockquote {
+			font-size: 1.17em ;
 			padding: 1em ;
+		}
+
+		section.summary blockquote span.blockquote-expands {
+			display: none ;
 		}
 
 
